# teammate-mcp

./: .gitignore  LICENSE  MIGRATION.md  README.md  pyproject.toml
.ccb/: ccb.config
commands/: ask.md  drain.md  register.md  team-ask.md  team-list.md  team-register.md  tm.md  tmclaude.md  tmcodex.md
examples/: basic_qa.md  parallel_queue.md  ping_pong.md
hooks/: user_prompt_submit_inbox_drain.py
iterm_autolaunch/: teammate_label.py
scripts/: REPRODUCE.md  auto_demo.py  concurrent_diag.py  large_payload_diag.py  live_round_trip.py  loop_demo.py  wordchain_test.sh
skills/: team-register.md
src/teammate_mcp/: __init__.py  cli.py  iterm.py  log.py  queue.py  registry.py  server.py  spawn_track.py  watcher.py
templates/: AGENTS.md  CLAUDE.md  config.codex.toml  settings.claude.json
tests/: manual_demo.md  test_e2e.py  test_iterm.py  test_queue.py  test_registry.py  test_smoke.py
tests/results/: live-20260426T092019Z.jsonl  live-20260426T092618Z.jsonl  live-20260426T093141Z.jsonl  live-20260426T093709Z.jsonl  live-20260426T095139Z.jsonl  live-20260426T095804Z.jsonl  live-20260426T100013Z.jsonl  loop-20260426T073633Z.jsonl  loop-20260426T075233Z.jsonl  sample-auto-demo.jsonl  sample-iterm-handshake.jsonl
