[project]
name = "teammate-mcp"
version = "0.10.5"
description = "Inter-agent Q&A MCP server: let Claude Code and Codex CLI ask each other questions through your iTerm panes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "jonghklee" },
]
keywords = ["mcp", "claude", "codex", "iterm", "agent", "multi-agent", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "iterm2>=2.7",
    "mcp>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
teammate-mcp = "teammate_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/jonghklee/teammate-mcp"
Issues = "https://github.com/jonghklee/teammate-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teammate_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
